force-app/main/default/objects/Pharmacy__c/Pharmacy__c.object-meta.xml
<CustomObject>
    <label>Pharmacy</label>
    <nameField>
        <displayFormat>BID - {00000}</displayFormat>
        <label>Bill Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pharmacies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>