force-app/main/default/objects/Pharmacy__c/fields/Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Balance_Amount__c</fullName>
    <formula>Total_Amount__c -  Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>