force-app/main/default/objects/Pharmacy__c/fields/Medicine_1__c.field-meta.xml
<CustomField>
    <fullName>Medicine_1__c</fullName>
    <label>Medicine 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acetaminophen</fullName>
            </value>
            <value>
                <fullName>Cymbalta</fullName>
            </value>
            <value>
                <fullName>Leqvio</fullName>
            </value>
            <value>
                <fullName>Omeprazole</fullName>
            </value>
            <value>
                <fullName>Dupixent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>